app/javascript/snap/styles/components/_base.scss
* {
    font-family: 'Calibre-Regular', sans-serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-size: 1.125rem;
}

html, body {
    height:100%;
    font-size: 1rem !important;
    font-family: 'Calibre-Regular', sans-serif;
    font-weight: 400;
    color: #282828;
    font-kerning:normal;
    font-feature-settings:"kern";
    text-rendering:optimizeLegibility;
    font-variant-ligatures:common-ligatures;
}

h1 {
    font-size: 2.25rem;
    margin-bottom: 1rem;
    font-family: 'Calibre-Medium';
    font-weight: normal;
    margin-top: 0;
}

h2 {
    font-size: 1.3125rem;
    margin-bottom: 0.875rem;
    font-family: 'Calibre-Medium';
    font-weight: normal;
}

p {
    color: #8C8C8D;
    font-family: 'Calibre-Regular';
} 

.content {
    text-align: center;
    padding: 0 5vw;
}

.snap-text-muted {
    color: #8C8C8D;
    font-size: 0.875rem !important;
}

.opaque {
    opacity: 0.2 !important;
}

.language-select {
    padding: 0 5vw;
    .btn-group {
        width: 100%;
        .btn {
            background-color: #FFF;
            text-align: left;
            border-radius: 0;
            color: #8C8C8D;
            border: 0.125rem solid #E3E3E3;

            &:focus {
                outline: none;
                box-shadow: none;
            }
        }
    }
}

.ReactModal__Body--open {
    overflow-y: hidden;
}

.Modal {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: rgb(255, 255, 255);
    overflow: auto;
    border-radius: 0px;
    outline: none;
    padding: 2rem;
    text-align: center;

    .close {
        font-size: 1.875rem;
        position: absolute;
        top: 2vh;
        right:3vh;
    }

    h1 {
        margin-top:5vh;
    }

    .list-group {
        font-size: 1rem;
        margin-top: 1.5rem;
        
        .list-group-item {
            text-align: left;
            color: #8C8C8D;

            &:first-child {
                border-top-left-radius: 0;
                border-top-right-radius: 0;
            }

            &:last-child {
                border-bottom-left-radius: 0;
                border-bottom-right-radius: 0;
            }

            .selected-lang {
                color: #F74D31;
                float: right;
            }
        }
    }

    .dismiss {
        text-align: left;
        float: left;
        line-height: 2rem;
        font-size: 1.5rem;
    }

    .reset {
              
        .title {
            margin-top: 20vh;
        }
        
        .message {
            margin-top: 10vh;
        }
        
        .action {
            margin-top: 10vh;
        }
    }

    .bookmark {
        .picture {
            margin-top: 5vh;
            img {
                width: 100%;
                height: 25vh;
            }
        }
    
        .message {
            margin: 3vh;
        }
    
        form {
            input[type=email]{
                border: 0;
                border-radius: 0;
                height: 50px;
                border-bottom: 2px solid #E3E3E3;
            }
    
            .form-check {
                padding: 2rem;
                label {
                    font-size: 1.4rem;
                }
            }
        }
    }
    
}

.snap-btn {
    border-radius: 0;
    border: .125rem solid #E3E3E3;
    height: 10vh;
    width: 100%;
    padding: 3vh 0;

    &.snap-btn-default {
        color: #8C8C8D;
        background-color: #fff;
    }

    &.snap-btn-danger {
        color: #FFF;
        background-color: #D4432A;
        border: none !important;
    }
}

input[type=email].error {
    border-bottom: 2px solid red !important;
}

.footer {
    color: #787878;
}

// /* smartphone (landscape) */
// @media only screen and (min-device-width : 320px) and (max-device-width : 480px) and (orientation : landscape) {
    
//     h2 {
//         font-size: 1.5625rem;
//     }
    
//     p {
//         font-size: 1.625rem;
//     } 
// }

/* iPhone 6s and below. Smaller Devices (Portrait) */
@media only screen and (min-device-width: 320px) and (max-device-height: 667px) and (orientation : portrait) {
/* Styles */

* {
    font-size: 1rem;
}
 
h1 {
    font-size: 2rem;
    margin-top: 0;
    line-height: 1;
}

h2 {
    font-size: 1.2rem;
}


}

/* iPads (portrait and landscape) ----------- */
@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
/* Styles */
    h1 {
        font-size: 2.8125rem;
        margin-bottom: 2.5rem;
    }

    .content {
        padding: 0 20vw;
    }

    .language-select {
        .btn {
            height: 3rem;
        }
    }

    .snap-muted-text {
        font-size: 1.125rem;
    }

    .Modal {
        padding: 12rem;

        .close {
            font-size: 2rem;
        }

        h1 {
            margin-top:0;
        }

        .list-group {
            font-size: 1rem;
            margin-top: 2.875rem;
            
            .list-group-item {
                height: 3.5rem;
                line-height: 2rem;
            }
        }

    
        
    }
}

/* iPads (landscape) ----------- */
@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
/* Styles */
    h2 {
        font-size: 1.5625rem;
    }

    p {
        font-size: 1.625rem;
    } 
}

/* iPads (portrait) ----------- */
@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
/* Styles */
}
/**********
iPad 3
**********/
@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) and (-webkit-min-device-pixel-ratio : 2) {
/* Styles */
}

@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) and (-webkit-min-device-pixel-ratio : 2) {
/* Styles */
}

